# PACS

./: .gitignore  CMakeCache.txt  Makefile  a.txt  cmake_install.cmake
Laboratory-1/: speedup.py  test.py  times-o0.csv  times-o2.csv
Laboratory-1/src/: bench  bench.s  benchmark.cpp  benchmark.sh  test
Laboratory-2/eigen-3.4.0/debug/msvc/: eigen.natvis
Laboratory-2/src/: bench  benchmark1.cpp  benchmark2.cpp  eigen_mult.cpp  eigen_novec.cpp  ej2.cpp  ejercicios.txt  mat_mult.cpp  req.txt  test.cpp
Laboratory-2/src/ej1/: benchmark1_eigen.cpp  benchmark1_noeigen.cpp
Laboratory-2/src/ej2/: ej2_eigen.cpp  ej2_noeigen.cpp
Laboratory-2/src/ej3/: benchmark3_eigenClock.cpp  benchmark3_eigenGTOD.cpp  benchmark3_noEigenClock.cpp  benchmark3_noEigenGTOD.cpp
Laboratory-3/: CMakeCache.txt  cmake_install.cmake  pi_taylor_parallel  pi_taylor_parallel.cc  pi_taylor_parallel_kahan  pi_taylor_parallel_kahan.cc  pi_taylor_sequential  pi_taylor_sequential.cc  plot_data.py  questions.md
Laboratory-4/: CMakeLists.txt  Makefile  PACS_p4.pdf:Zone.Identifier  b_bench  b_bench.cpp  b_bench_rel  cmake_install.cmake  cv  cv_deb  cv_pipeline.cpp  nb_bench  nb_bench.cpp  nb_bench_deb  nb_bench_rel  plot_bench.py  plot_data.py  smallpt_thread_pool.cpp  times-bench.csv  times-cell.csv  times-col.csv  times-cv.csv  times-row.csv
Laboratory-4/include/: join_threads.hpp  nonblocking_queue.hpp  nq_impl.hpp  thread_pool.hpp  thread_pool_term.hpp  threadsafe_queue.hpp
Laboratory-5/: CMakeLists.txt  README.md  basic_environ.c  build.sh  conv_kernel.cl  example.cpp  executable  flipINPLACE_environ.c  flipINPLACE_kernel.cl  flip_environ.c  gpt  gpt.cpp  hist.cpp  hist.py  histDARIO_kernel.cl  hist_environ.c  hist_kernel.cl  load.cpp  main  rot.cpp  rot_environ.c  setpath.sh  task  task.cpp
Laboratory-5/Convol/: CMakeLists.txt  conv  conv.cpp  conv_environ.c  conv_kernel.cl  gpt  gpt.cpp  gpt.py
Laboratory-5/examples/: basic_environ.cpp  kernel.cl  load.cpp  task.cpp
Laboratory-5/histogram/: CMakeLists.txt  data-atomic.txt  data-tile.txt  histDARIO_environ.c  hist_atomic.cl  hist_atomic.cpp  hist_display.cpp  hist_tile.cl  hist_tile.cpp  hist_tile_env.cpp  histogram.cpp  plot_hist.hpp
Laboratory-5/image-flip/: CMakeLists.txt  flip_environ.cpp  flip_inplace_env.cpp  flip_kernel.cl
Laboratory-5/image-rot/: CMakeLists.txt  rot.cpp  rot_environ.cpp  rot_kernel.cl
Laboratory-5/test/: image_flip  kernel.cl  rot_environ.cpp
Laboratory-6/: CMakeLists.txt  README.md  dyn-distr-5000-200.csv  dyn-distr-5000-500.csv  dyn.sh  output-both.txt  output-cpu.txt  output-gpu.txt  plot-splits.py  plot_alldist.py  plot_dist.py  plot_static.py  plot_totals.py  static-5000-rot.csv  static-5000.csv  static-naive-1000.csv  static-naive-2000.csv  static-naive-4000.csv  static-naive.csv  static.csv  static.sh
Laboratory-6/kernels/: flip_inplace.cl  hist_tile.cl  rot_kernel.cl
Laboratory-6/measures/dyn/: dyn-pomnitimes.csv
Laboratory-6/measures/dyn/huge/: dyn-distr-5000-100.csv  dyn-distr-5000-1000.csv  dyn-distr-5000-1250.csv  dyn-distr-5000-1500.csv  dyn-distr-5000-250.csv  dyn-distr-5000-500.csv  dyn-distr-5000-750.csv
Laboratory-6/measures/dyn/kitty/: dyn-distr-5000-100.csv  dyn-distr-5000-1000.csv  dyn-distr-5000-1250.csv  dyn-distr-5000-1500.csv  dyn-distr-5000-1750.csv  dyn-distr-5000-2000.csv  dyn-distr-5000-250.csv  dyn-distr-5000-500.csv  dyn-distr-5000-750.csv
Laboratory-6/measures/dyn/pomni/: dyn-distr-5000-100.csv  dyn-distr-5000-1000.csv  dyn-distr-5000-1250.csv  dyn-distr-5000-1500.csv  dyn-distr-5000-1750.csv  dyn-distr-5000-200.csv  dyn-distr-5000-2000.csv  dyn-distr-5000-250.csv  dyn-distr-5000-500.csv  dyn-distr-5000-750.csv
Laboratory-6/measures/static/kitty/: static-1000.csv  static-2000.csv  static-3000.csv  static-4000.csv  static-5000.csv
Laboratory-6/measures/static/pomni/: static-naive-3000.csv  static-naive-5000.csv
Laboratory-6/src/: CMakeLists.txt  main-dyn-comparison.cpp  main-dyn.cpp  main-static-naive.cpp  main.cpp  measurement_info.hpp  plot_hist.hpp
Laboratory-6/src/schedulers/: dyn_scheduler.cpp  dyn_scheduler.hpp  random_dyn_scheduler.hpp  scheduler.cpp  scheduler.hpp  static_scheduler.cpp  static_scheduler.hpp
Laboratory-6/src/utils/: clutils.cpp  clutils.hpp  fileutils.cpp  fileutils.hpp  measurement_info.cpp  measurement_info.hpp  plot_hist.hpp
Laboratory-6/src/workers/: hist_naive_worker.cpp  hist_naive_worker.hpp  rot_naive_worker.cpp  rot_naive_worker.hpp  workers.hpp
code_examples/: Makefile  atomic_synchronization  cmake_install.cmake  hello_pacs_args  lambda_example  mutex  parallel_sum_future  saxpy_scaling  synchronization  thread_joinable
eigen-3.4.0/debug/msvc/: eigen.natvis
pilgor/Laboratory-3/: Makefile  pi_taylor_parallel  pi_taylor_parallel.cc  pi_taylor_sequential.cc  questions.md
pilgor/code_examples/: hello  hello_pacs_two_threads  packaged_task  saxpy  saxpy_future
